--- a/Strona.html
+++ b/Strona.html
@@ -25,7 +25,7 @@
 
     <nav> <!--Panel po lewej stronie-->
         <ul id="left_panel">
-            <li><a href="Strona.html" onclick="openbox(0); return false">Strona główna</a></li>
+            <li><a href="#" onclick="openbox(0); return false">Strona główna</a></li>
             <li><a href="#" onclick="openbox(1); return false">Konta osobiste</a></li>
             <li><a href="#" onclick="openbox(2); return false">Promki</a></li>
             <li><a href="#" onclick="openbox(3); return false">Pożyczki</a></li>
@@ -35,12 +35,47 @@
         <div id="box1" class="box" style="display: none">
                     <a>
                         <div id="dox_pozyc">
+                            <h1>Lista kont osobistych</h1>
 
                             <img id="img_ING" src="/foto/Zrzut ekranu 2023-09-21 151316.png" height="250px">
                                 <div id="text_ING">
-                        <h3>KAMPANIA Z PROCESEM ON-LINE</h3>
-                        <h2>Konto Direct w <a href="https://www.comperialead.pl/a/pp_adserwer.php?link=4da97a6db9592417f49930606339cc80" rel="nofollow, noindex">ING Banku Śląskim</a></h2>
-                        <h4>do <b>200 zł</b> zysku za otwarcie i aktywne korzystanie z konta najważniejsze funkcje konta za 0 zł aplikacja Moje ING mobile- od otworzenia konta w ciągu 2 miesięcy wykonać bezgotówkową transakcje na kwote minimum 200 zł</h1>
+                                    <h3>KAMPANIA Z PROCESEM ON-LINE</h3>
+                                    <h2>Konto Direct w <a href="https://www.comperialead.pl/a/pp_adserwer.php?link=4da97a6db9592417f49930606339cc80" rel="nofollow, noindex">ING Banku Śląskim</a></h2>
+                                    do <strong>200 zł</strong> zysku za otwarcie i aktywne korzystanie z konta najważniejsze funkcje konta za <strong>0 zł</strong> 
+                                    Aplikacja Moje ING mobile- od otworzenia konta w ciągu 2 miesięcy wykonać bezgotówkową transakcje na kwote minimum <strong>200 zł</strong>
+                                </div>
+
+                            <img id="img_PEKAO" src="/foto/Zrzut ekranu 2023-09-21 172336.png" height="350px">
+                                <div id="text_PEKAO">
+                                    <h3>KAMPANIA Z PROCESEM ON-LINE</h3>
+                                    <h2><a href="https://www.comperialead.pl/a/pp_adserwer.php?link=d9f4aa51f7c66c32f102b5bb68257c98" rel="nofollow, noindex">BANK PEKAO</a> - konto dla młodych</h2>
+                                    <h4>do <strong>200 zł</strong> od banku i punkty wymienialne na nagrody o wartości <strong>100 zł</strong>
+                                    <h3>Konto z kartą z wizerunkiem muzycznym</h3>
+                                    <strong>7%</strong> na Koncie Oszczędnościowym na 6 mies. Do <strong>100 tys. zł</strong> <strong>0 zł</strong> za prowadzenie 
+                                    Konta Przekorzystnego z kartą Visa <strong>0 zł</strong> za obsługę karty debetowej</h4>
+                                </div>
+
+                           
+                            <img id="img_mBank" src="/foto/Zrzut ekranu 2023-09-21 210555.png" height="350px">
+                                <div id="text_mBank">
+                                    <h2><a href="https://www.comperialead.pl/a/pp_adserwer.php?link=8f4eae7216b581a508ae357756673e04" rel="nofollow, noindex">OTWÓRZ KONTO </a> mBank</h2>
+                                    które samo oszczędza nawet na <strong>8%</strong> i zgarnij do <strong>470 zł</strong>
+                                    <strong>0 zł</strong> za otwarcie i prowadzenie rachunku
+                                    <strong>0 zł</strong> za wypłaty kartą od <strong>100 zł</strong> ze wszystkich bankomatów w Polsce
+                                    <strong>0 zł</strong> za kartę przy łącznej kwocie transakcji na <strong>350 zł</strong> w miesiącu
+                                    <strong>0 zł</strong> za wypłaty z bankomatów za granicą
+                                    aby otrzymać <strong>470 zł</strong> należy:
+                                    wykonanie co najmniej <strong>PIĘCIU (5)</strong><h4>TRANSAKCJI W MIESIĄCU ZAŁOŻENIA KONTA LUB W JEDNYM Z DWÓCH PIERWSZYCH MIESIĘCY PO OTWARCIU RACHUNKU =></h4> transakcje bezgotówkowe: kartą i/lub BLIKiem i/lub płatność telefonem, i/lub przelew inicjowany przez klienta (nie wliczamy przelewów wewnętrznych).
+                                    <strong>WAŻNA INFORMACJA:</strong> W pierwszej kolejności należy zapisać się do promocji. Następnie wypełniamy wniosek - przez aplikację lub wracamy do strony głównej i wybieramy kuriera.
+                                </div>
+
+                            <img id="img_PKO" src="/foto/Zrzut ekranu 2023-09-21 214741.png" height="350px">
+                                <div id="text_PKO">
+                                    <h2><a href="https://www.comperialead.pl/a/pp_adserwer.php?link=8f4eae7216b581a508ae357756673e04" rel="nofollow, noindex">PKO bank polski</a>- konto za zero</h2>
+                                    <strong>0 zł</strong> za wypłaty gotówki kartą ze wszystkich bankomatów w Polsce i na świecie;
+                                    <strong>0 zł</strong> za obsługę karty debetowej;
+                                    <strong>0 zł</strong> za zlecenie stałe oraz polecenie zapłaty;
+                                    <strong>0 zł</strong> za wypłatę gotówki do <strong>300 zł</strong> (Cashback) w punktach usługowych i handlowych oznakowanych symbolem Visa cash;
                                 </div>
                         </div>
 
@@ -113,7 +148,7 @@
                 text-decoration: none;
                 font-weight: bold;
                 display: inline-block;
-                width: 100px;
+                width: 150px;
             }
     
             #left_panel a:hover {
@@ -131,14 +166,72 @@
                 text-align: center;
             }
             #img_ING{
+                float: left;
                 border-radius: 20px;
-                position: relative;
-                top:20px;
-                left: -300px;
-                margin-bottom: 50px;
+                text-align-last: auto;
+                margin-bottom: 150px;
+                margin-left: 80px;
+                margin-top: 80px;
+            }
+            #img_PEKAO{
+                float: right;
+                border-radius: 20px;
+                text-align-last: auto;
+                margin-top: 50px;
+                margin-right: 20px;
+                margin-bottom: 150px;
+            }
+            #img_mBank{
+                float: left;
+                border-radius: 20px;
+                text-align-last: auto;
+                margin-left: 120px;
+                margin-top: 120px;
+            }
+            #img_PKO{
+                float: right;
+                border-radius: 20px;
+                text-align-last: auto;
+                margin-right: -618px;
+                margin-top: 330px;
             }
             #text_ING{
-                left: 100px;
+                float:right;
+                width: 550px;
+                height: 200px;
+                margin-top: 230px;
+                margin-right: 30px;
+                border-radius: 15px;
+                box-shadow: 30px 30px 45px  rgba(0,0,0,0.2);
+            }
+            #text_PEKAO{
+                float:left;
+                width: 650px;
+                height: 260px;
+                margin-top: 300px;
+                margin-left: 50px;
+                border-radius: 15px;
+                box-shadow: -30px 30px 45px  rgba(0,0,0,0.2);
+            }
+            #text_mBank{
+                float:right;
+                width: 650px;
+                height: 320px;
+                margin-right: 15px;
+                margin-bottom: 80px;
+                margin-top: 380px;
+                border-radius: 15px;
+                box-shadow: 30px 30px 45px  rgba(0,0,0,0.2);
+            }
+            #text_PKO{
+                float:left;
+                width: 650px;
+                height: 170px;
+                margin-left: 40px;
+                margin-top: 600px;
+                margin-bottom: 50px;
+                border-radius: 15px;
+                box-shadow: -30px 30px 45px  rgba(0,0,0,0.2);
             }
     </style>
     <script>
